--- a/nginx-reverse-proxy.conf
+++ b/nginx-reverse-proxy.conf
@@ -1,32 +1,33 @@
 events {
-    worker_connections 1024;
+    worker_connections 1024;  # Numero massimo di connessioni simultanee gestite da ogni worker
 }
-
 http {
+    # Nginx default configuration
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
-
     sendfile on;
     keepalive_timeout 65;
 
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost; 
 
+        # Redirect all requests that starts with /app/ to the WebGL app
         location /app/ {
-            proxy_pass http://webgl-app:80/; 
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://webgl-app:80/; #Redirect to the WebGL app container
+            #Sends headers, ip, and protocol information to the WebGL app
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP $remote_addr;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /auth/ {
-            proxy_pass http://auth_portal:3000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://auth_portal:3000/; # Redirect to the authentication portal container
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP $remote_addr;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location / {
