--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MYSQL_DATABASE=my_web_db
-MYSQL_USER=web_user
-MYSQL_PASSWORD=LaPasswordUtenteSuperSegreta! 
+MYSQL_DATABASE=sqldb
+MYSQL_USER=dbuser
+MYSQL_PASSWORD=dbuserpassword
