--- a/nginx-reverse-proxy.conf
+++ b/nginx-reverse-proxy.conf
@@ -1,5 +1,6 @@
 events {
-    worker_connections 1024;  # Numero massimo di connessioni simultanee gestite da ogni worker
+    #Set the maximum number of simultaneous connections per worker
+    worker_connections 1024;
 }
 http {
     # Nginx default configuration
@@ -15,21 +16,13 @@ http {
         # Redirect all requests that starts with /app/ to the WebGL app
         location /app/ {
             proxy_pass http://webgl-app:80/; #Redirect to the WebGL app container
-            #Sends headers, ip, and protocol information to the WebGL app
-            # proxy_set_header Host $host;
-            # proxy_set_header X-Real-IP $remote_addr;
-            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            # proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        # Redirect all requests that starts with /auth/ to the authentication portal
         location /auth/ {
             proxy_pass http://auth_portal:3000/; # Redirect to the authentication portal container
-            # proxy_set_header Host $host;
-            # proxy_set_header X-Real-IP $remote_addr;
-            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            # proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Redirect all other requests to the authentication portal
         location / {
             return 302 /auth/;
         }
